✨ feat(query-utils): 引入 QueryCondition 记录类型并优化动态 SQL 构建逻辑
- 添加 `QueryCondition` 记录类型以清晰表达查询条件。
- 在 `QueryJsonHelper` 中增强错误处理与 JSON 查询路径构建。
- 优化 `QueryHelper` 中的条件生成逻辑，支持特殊关键字处理与参数化构建。
- 调整 `LoggerRequest` 的 `buildQueryFragment` 方法以适配新逻辑。